--- a/app/src/main/res/layout/sign_in_layout.xml
+++ b/app/src/main/res/layout/sign_in_layout.xml
@@ -49,7 +49,7 @@
         android:layout_height="60dp"
         android:layout_marginTop="20dp"
         android:backgroundTint="#008000"
-        android:text="SUBMIT"
+        android:text="SIGN IN"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/signIn" />
