--- a/app/src/main/res/layout/sign_up_layout.xml
+++ b/app/src/main/res/layout/sign_up_layout.xml
@@ -48,7 +48,7 @@
         android:layout_width="120dp"
         android:layout_height="60dp"
         android:layout_marginTop="10dp"
-        android:text="SUBMIT"
+        android:text="SIGN UP"
         android:backgroundTint="#008000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
