--- a/app/src/main/res/layout/item_file.xml
+++ b/app/src/main/res/layout/item_file.xml
@@ -16,24 +16,24 @@
         android:id="@+id/nameTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="18sp"
+        android:textSize="20sp"
         android:textStyle="bold"
         android:paddingTop="8dp"
         android:textColor="@android:color/black" />
 
     <TextView
-        android:id="@+id/descriptionTextView"
+        android:id="@+id/categoryTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="14sp"
-        android:paddingTop="4dp"
+        android:textSize="20sp"
+        android:paddingTop="10dp"
         android:textColor="@android:color/darker_gray" />
 
     <TextView
         android:id="@+id/priceTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="16sp"
+        android:textSize="20sp"
         android:paddingTop="4dp"
         android:textStyle="bold"
         android:textColor="@android:color/holo_red_dark" />
