--- a/app/src/main/res/layout/activity_book_details.xml
+++ b/app/src/main/res/layout/activity_book_details.xml
@@ -1,5 +1,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFFFE0"
@@ -7,12 +8,13 @@
     android:padding="16dp"
     tools:context=".BookDetailsActivity">
 
-    <!-- Book Details Section -->
     <ImageView
         android:id="@+id/bookImageView"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:scaleType="centerCrop" />
+        android:layout_width="300dp"
+        android:layout_height="350dp"
+        android:scaleType="centerCrop"
+        android:layout_gravity="center"
+        app:layout_constraintHeight_percent="0.67" />
 
     <TextView
         android:id="@+id/bookTitleTextView"
@@ -20,8 +22,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:textColor="#964B00"
-        android:textStyle="bold"
-        android:textSize="20dp" />
+        android:textSize="30dp"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/bookDescriptionTextView"
@@ -34,8 +36,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
+        android:textStyle="bold"
         android:textColor="@android:color/holo_red_dark"
-        android:textSize="18sp" />
+        android:textSize="20sp" />
 
     <!-- Divider line -->
     <View
@@ -82,9 +85,10 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:padding="10dp"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textStyle="bold"
         android:textSize="20dp"
         android:text="Send Message"
+        android:backgroundTint="#008000"
         android:textAllCaps="false" />
 </LinearLayout>
