--- a/app/src/main/res/layout/book_layout.xml
+++ b/app/src/main/res/layout/book_layout.xml
@@ -188,7 +188,7 @@
             android:text="Contact Number" />
 
         <EditText
-            android:id="@+id/contact"
+            android:id="@+id/contactNumber"
             android:layout_width="match_parent"
             android:layout_height="38dp"
             android:layout_marginBottom="5dp"
