Edit book list layout

--- a/app/src/main/res/layout/activity_user_books.xml
+++ b/app/src/main/res/layout/activity_user_books.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#ffffe0"
     tools:context=".UserBooksActivity">
 
     <androidx.recyclerview.widget.RecyclerView
@@ -13,5 +14,18 @@
         android:padding="16dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent" />
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/nav_view"
+        android:layout_width="0dp"
+        android:layout_height="60dp"
+        android:background="#023020"
+        app:itemIconTint="#FEDC56"
+        app:itemTextColor="#FEDC56"
+        app:itemActiveIndicatorStyle="@color/black"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:menu="@menu/bottom_menu"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
