Edit book list layout

--- a/app/src/main/res/layout/book_item_layout.xml
+++ b/app/src/main/res/layout/book_item_layout.xml
@@ -43,6 +43,12 @@
             android:textSize="14dp" />
 
         <TextView
+            android:id="@+id/textDescription"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="14dp" />
+
+        <TextView
             android:id="@+id/textPrice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
