--- a/app/src/main/res/layout/activity_book_details.xml
+++ b/app/src/main/res/layout/activity_book_details.xml
@@ -48,6 +48,7 @@
         android:layout_marginTop="8dp"
         android:textColor="@android:color/holo_red_dark"
         android:textSize="20sp"
+        android:textStyle="bold"
         android:text="price"/>
 
     <TextView
@@ -57,13 +58,6 @@
         android:layout_marginTop="8dp"
         android:textSize="20sp"
         android:text="description"/>
-
-
-    <TextView
-        android:id="@+id/bookContactTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Contact" />
 
     <!-- Divider line -->
     <View
@@ -77,12 +71,70 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:padding="10dp"
+        android:padding="5dp"
+        android:layout_marginBottom="10dp"
         android:text="Contact Seller"
         android:textAlignment="center"
         android:textColor="#964B00"
         android:textStyle="bold"
-        android:textSize="20dp" />
+        android:textSize="25dp" />
+
+
+<!--    <TextView-->
+<!--        android:id="@+id/bookContactTextView"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="Contact" />-->
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textStyle="bold"
+            android:textSize="15dp"
+            android:layout_marginBottom="10dp"
+            android:text="Seller Phone Number" />
+
+        <TextView
+            android:id="@+id/bookContactTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="right"
+            android:textSize="15dp"
+            android:text="" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textStyle="bold"
+            android:textSize="15dp"
+            android:layout_marginBottom="10dp"
+            android:text="Seller Email" />
+
+        <TextView
+            android:id="@+id/bookEmailTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="right"
+            android:textSize="15dp"
+            android:text="" />
+    </LinearLayout>
+
 
     <EditText
         android:id="@+id/idEdtMessage"
@@ -90,7 +142,6 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:textColor="#964B00"
-        android:textStyle="bold"
         android:textSize="20dp"
         android:hint="Enter Message" />
 
@@ -100,10 +151,24 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:padding="10dp"
-        android:textColor="#000000"
+        android:textColor="@color/white"
         android:textStyle="bold"
         android:textSize="20sp"
-        android:text="Send Message"
+        android:text="Send SMS"
         android:textAllCaps="false"
-        android:background="#FF0000" /> <!-- Red background for visibility -->
+        android:backgroundTint="#008000"/>
+
+    <Button
+        android:id="@+id/idBtnSendEmail"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:padding="10dp"
+        android:textColor="@color/white"
+        android:textStyle="bold"
+        android:textSize="20sp"
+        android:text="Send Email"
+        android:textAllCaps="false"
+        android:backgroundTint="#008000"/>
+
 </LinearLayout>
