--- a/app/src/main/res/layout/activity_book_details.xml
+++ b/app/src/main/res/layout/activity_book_details.xml
@@ -1,174 +1,169 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#FFFFE0"
-    android:orientation="vertical"
-    android:padding="16dp"
     tools:context=".BookDetailsActivity">
 
-    <!-- Book Details Section -->
-    <ImageView
-        android:id="@+id/bookImageView"
-        android:layout_width="200dp"
-        android:layout_height="250dp"
-        android:scaleType="centerCrop"
-        android:layout_gravity="center"
-        app:layout_constraintHeight_percent="0.67" />
-
-    <TextView
-        android:id="@+id/bookTitleTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:textColor="#964B00"
-        android:textSize="30dp"
-        android:text="Title"
-        android:textStyle="bold" />
-
-    <TextView
-        android:id="@+id/bookAuthor"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Author"
-        android:textSize="20dp"
-        android:textStyle="italic"/>
-
-    <TextView
-        android:id="@+id/bookCategoryTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Category" />
-
-    <TextView
-        android:id="@+id/bookPriceTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:textColor="@android:color/holo_red_dark"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        android:text="price"/>
-
-    <TextView
-        android:id="@+id/bookDescriptionTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:textSize="20sp"
-        android:text="description"/>
-
-    <!-- Divider line -->
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginVertical="16dp"
-        android:background="@android:color/darker_gray" />
-
-    <!-- Message Sending Section -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:padding="5dp"
-        android:layout_marginBottom="10dp"
-        android:text="Contact Seller"
-        android:textAlignment="center"
-        android:textColor="#964B00"
-        android:textStyle="bold"
-        android:textSize="25dp" />
-
-
-<!--    <TextView-->
-<!--        android:id="@+id/bookContactTextView"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:text="Contact" />-->
-
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="vertical"
+        android:padding="16dp">
+
+        <!-- Book Details Section -->
+        <ImageView
+            android:id="@+id/bookImageView"
+            android:layout_width="200dp"
+            android:layout_height="250dp"
+            android:scaleType="centerCrop"
+            android:layout_gravity="center"
+            app:layout_constraintHeight_percent="0.67" />
 
         <TextView
+            android:id="@+id/bookTitleTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_marginTop="16dp"
+            android:textColor="#964B00"
+            android:textSize="30dp"
+            android:text="Title"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/bookAuthor"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Author"
+            android:textSize="20dp"
+            android:textStyle="italic"/>
+
+        <TextView
+            android:id="@+id/bookCategoryTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Category" />
+
+        <TextView
+            android:id="@+id/bookPriceTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:textColor="@android:color/holo_red_dark"
+            android:textSize="20sp"
             android:textStyle="bold"
-            android:textSize="15dp"
+            android:text="price"/>
+
+        <TextView
+            android:id="@+id/bookDescriptionTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:textSize="20sp"
+            android:text="description"/>
+
+        <!-- Divider line -->
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginVertical="16dp"
+            android:background="@android:color/darker_gray" />
+
+        <!-- Message Sending Section -->
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:padding="5dp"
             android:layout_marginBottom="10dp"
-            android:text="Seller Phone Number" />
-
-        <TextView
-            android:id="@+id/bookContactTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="right"
-            android:textSize="15dp"
-            android:text="" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:text="Contact Seller"
+            android:textAlignment="center"
+            android:textColor="#964B00"
             android:textStyle="bold"
-            android:textSize="15dp"
-            android:layout_marginBottom="10dp"
-            android:text="Seller Email" />
+            android:textSize="25dp" />
 
-        <TextView
-            android:id="@+id/bookEmailTextView"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="right"
-            android:textSize="15dp"
-            android:text="" />
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textStyle="bold"
+                android:textSize="15dp"
+                android:layout_marginBottom="10dp"
+                android:text="Seller Phone Number" />
+
+            <TextView
+                android:id="@+id/bookContactTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="right"
+                android:textSize="15dp"
+                android:text="" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textStyle="bold"
+                android:textSize="15dp"
+                android:layout_marginBottom="10dp"
+                android:text="Seller Email" />
+
+            <TextView
+                android:id="@+id/bookEmailTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="right"
+                android:textSize="15dp"
+                android:text="" />
+        </LinearLayout>
+
+        <EditText
+            android:id="@+id/idEdtMessage"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:textColor="#964B00"
+            android:textSize="20dp"
+            android:hint="Enter Message" />
+
+        <Button
+            android:id="@+id/idBtnSendMessage"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:padding="10dp"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            android:textSize="20sp"
+            android:text="Send SMS"
+            android:textAllCaps="false"
+            android:backgroundTint="#008000"/>
+
+        <Button
+            android:id="@+id/idBtnSendEmail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:padding="10dp"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            android:textSize="20sp"
+            android:text="Send Email"
+            android:textAllCaps="false"
+            android:backgroundTint="#008000"/>
     </LinearLayout>
-
-
-    <EditText
-        android:id="@+id/idEdtMessage"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:textColor="#964B00"
-        android:textSize="20dp"
-        android:hint="Enter Message" />
-
-    <Button
-        android:id="@+id/idBtnSendMessage"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:padding="10dp"
-        android:textColor="@color/white"
-        android:textStyle="bold"
-        android:textSize="20sp"
-        android:text="Send SMS"
-        android:textAllCaps="false"
-        android:backgroundTint="#008000"/>
-
-    <Button
-        android:id="@+id/idBtnSendEmail"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:padding="10dp"
-        android:textColor="@color/white"
-        android:textStyle="bold"
-        android:textSize="20sp"
-        android:text="Send Email"
-        android:textAllCaps="false"
-        android:backgroundTint="#008000"/>
-
-</LinearLayout>
+</ScrollView>
